--- a/views/lookup.handlebars
+++ b/views/lookup.handlebars
@@ -13,5 +13,5 @@
             </div>
         </div>
     </form>
-    <button type="submit" class="btn btn-primary" id="addBook">Submit</button>
+    <button type="submit" href="/rate-a-book" class="btn btn-primary" id="addBook">Submit</button>
 </div>
