--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,150 @@
 .list-group-item {
   line-height: 2.5;
 }
+.main {
+  position: relative; }
+
+.container {
+  width: 960px;
+  background: rgba(11, 13, 24, 0.6);
+  margin: 265px auto;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px; }
+
+.SignUp-form {
+  padding: 35px 70px 51px 70px; }
+
+.header {
+  align-items: center;
+  -moz-align-items: center;
+  -webkit-align-items: center;
+  -o-align-items: center;
+  -ms-align-items: center;
+  justify-content: space-between;
+  -moz-justify-content: space-between;
+  -webkit-justify-content: space-between;
+  -o-justify-content: space-between;
+  -ms-justify-content: space-between;
+  padding: 50px 57px; }
+
+input {
+  border: none;
+  background: #fff;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 13px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #222;
+  display: block;
+  font-family: Poppins;
+  position: relative;
+  z-index: 9; }
+  input::-webkit-input-placeholder {
+    color: #999; }
+  input::-moz-placeholder {
+    color: #999; }
+  input:-ms-input-placeholder {
+    color: #999; }
+  input:-moz-placeholder {
+    color: #999; }
+
+.submit {
+  background: #f8ba0f;
+  color: #fff;
+  font-size: 14px;
+  margin-top: 23px;
+  padding: 15px 20px;
+  cursor: pointer; }
+  .submit:hover {
+    background-color: #ce9906; }
+
+label {
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 2px;
+  display: block; }
+
+#quantity {
+  color: #999; }
+
+.form-group {
+  align-items: center;
+  -moz-align-items: center;
+  -webkit-align-items: center;
+  -o-align-items: center;
+  -ms-align-items: center;
+  justify-content: space-between;
+  -moz-justify-content: space-between;
+  -webkit-justify-content: space-between;
+  -o-justify-content: space-between;
+  -ms-justify-content: space-between; }
+
+.form-destination {
+  width: 230px; }
+
+.form-date-from, .form-date-to {
+  width: 155px; }
+
+.form-quantity {
+  width: 80px;
+  position: relative; }
+
+.form-submit {
+  width: 140px; }
+
+.modify-qty {
+  position: absolute;
+  right: 12px;
+  font-size: 18px;
+  color: #999;
+  z-index: 99;
+  cursor: pointer; }
+
+.plus {
+  top: 23px; }
+
+.minus {
+  bottom: 0px; }
+
+.form-icon {
+  position: relative; }
+
+.ui-datepicker-trigger {
+  position: absolute;
+  right: 16px;
+  top: 40px;
+  color: #999;
+  font-size: 16px;
+  z-index: 99;
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer; }
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: calc( 100% - 30px);
+    max-width: 100%; }
+
+  .form-group {
+    flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -o-flex-direction: column;
+    -ms-flex-direction: column; }
+
+  .form-destination, .form-date-from, .form-date-to, .form-quantity {
+    width: 100%;
+    margin-bottom: 20px; } }
+@media screen and (max-width: 480px) {
+  .booking-form {
+    padding: 35px 30px 51px 30px; } }
