--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,12 @@
+<nav class="nav">
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Add a book</a>
+  </li>
+</nav>
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
