--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<nav class="nav">
+{{!-- <nav class="nav">
   <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -19,7 +19,7 @@
   <li class="nav-item">
     <a class="nav-link active" href="#">Add a book</a>
   </li>
-</nav>
+</nav> --}}
 
   {{{body}}}
 </body>
