--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,19 +8,12 @@
   <title>Book Wars</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
-<nav class="nav">
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Add a book</a>
-  </li>
-</nav>
-
+<body class="d-flex flex-column" id="background">
   {{{body}}}
 </body>
 
