--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,19 @@
-<div class="container">
+<div class="container" id="welcome">
   <div class="row">
     <div class="col-sm-12">
       <h1>Book Wars</h1>
     </div>
   </div>
-  <div class="row">
+  <div class="row" id="home-buttons">
     <div class="col-sm-6">
-     <button><a class="button" href="/top-rated">Top Rated Books</a></button>
+     <button id="button1"><a href="/top-rated">Top Rated Books</a></button>
     </div>
     <div class="col-sm-6">
-     <button><a class="button" href="/lookup">Rate a book</a></button>
+     <button id="button2"><a href="/lookup">Rate a book</a></button>
     </div>
   </div>
 </div>
+
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
