--- a/views/lookup.handlebars
+++ b/views/lookup.handlebars
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="container d-flex justify-content-center">
+    <h2>Book Lookup</h2>
+</div>
+<div id="lookup-form">
     <form>
         <div class="form-group row">
             <label for="inputAuthor" class="col-sm-2 col-form-label">Author</label>
