added google api functionality to serach the books

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -2,11 +2,11 @@
     <div class="card mb-3">
         <div class="row no-gutters">
             <div class="col-md-4">
-                <img src="..." class="bookCover" alt="...">
+                <img src="{{imageURL}}" class="bookCover" alt="Book cover">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="bookTitle"><{{bookTitle}}></h5>
+                    <h5 class="bookTitle">{{bookTitle}}</h5>
                     <h6 class="bookAuthor">{{bookAuthor}}</h6>
                     <p class="bookPlot">{{bookPlot}}</p>
                 </div>
