--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,16 +1,15 @@
-<div class="container">
-    <div class="card mb-3">
-        <div class="row no-gutters">
-            <div class="col-md-4">
-                <img src="..." class="bookCover" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="bookTitle"><{{bookTitle}}></h5>
-                    <h6 class="bookAuthor">{{bookAuthor}}</h6>
-                    <p class="bookPlot">{{bookPlot}}</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div class="row">
+   <ul>
+     {{#each books}}
+     <li>
+       <h2>{{title}}</h2>
+       <h3>author: {{author}}</h3>
+       <p>description: {{description}}</p>
+       <p>isbn_type: {{ISBN_type}}</p>
+       <p>isbn_id: {{ISBN_ID}}</p>
+       <p>page count: {{pageCount}}</p>
+       <p>category: {{category}}</p>
+     </li>
+     {{/each}}
+   </ul>
+ </div>
