--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+<script src="js/addbook.js" type="text/javascript"></script>
 </head>
 <body class="d-flex flex-column" id="background">
   {{{body}}}
+
+
 </body>
+
+
 </html>
