--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -7,10 +7,10 @@
        <h3>Votes: {{this.Count}}</h3>
        <h3>author: {{this.Book.author}}</h3>
        <p>description: {{this.Book.description}}</p>
-       <p>isbn_type: {{this.Book.ISBN_type}}</p>
+       {{!-- <p>isbn_type: {{this.Book.ISBN_type}}</p>
        <p>isbn_id: {{this.Book.ISBN_ID}}</p>
        <p>page count: {{this.Book.pageCount}}</p>
-       <p>category: {{this.Book.category}}</p>
+       <p>category: {{this.Book.category}}</p> --}}
      </li>
      {{/each}}
    </ul>
