Passport setup working :)

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -1,6 +1,6 @@
 <div id="main-container" class="container">
 <div class="jumbotron text-center header-wrap" align="center">
-    <img src="../public/images/login.jpg" alt="logo" class="mb-4" style="width:210px;">
+    <img src="public/images/logo.jpg" alt="logo" class="mb-4" style="width:210px;">
     <p class="lead">Welcome to <strong>Book Wars</strong> where you can rate and browse any book.</p>
     <hr class="my-4">
     <p class="lead">Start your search or rate a Book.</p>
@@ -15,4 +15,6 @@
     </div>
 </div>
 </div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
  
