--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -6,3 +6,4 @@
     <a href="/welcome">← Back To Home</a>
   </div>
 </div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
