--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -15,4 +15,7 @@
      {{/each}}
    </ul>
  </div>
+ <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/addbook.js"></script>
+
 
