--- a/views/searchResults.handlebars
+++ b/views/searchResults.handlebars
@@ -18,3 +18,5 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/addbook.js"></script>
