--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,3 +1,8 @@
+<ul class="nav justify-content-end" id="logout">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Logout</a>
+  </li>
+</ul>
 
 <div class="row">
    <ul>
