--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,3 +1,9 @@
+<ul class="nav justify-content-end" id="logout">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Logout</a>
+  </li>
+</ul>
+
 <div>
     <h1 id="errorMessage">404 Page Not Found</h1>
     <a href="/welcome">← Back To Home</a>
