--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,9 @@
+<ul class="nav justify-content-end" id="logout">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Logout</a>
+  </li>
+</ul>
+
 <div class="container" id="welcome">
   <div class="row">
     <div class="col-sm-12">
