--- a/views/searchResults.handlebars
+++ b/views/searchResults.handlebars
@@ -1,3 +1,9 @@
+<ul class="nav justify-content-end" id="logout">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Logout</a>
+  </li>
+</ul>
+
 <div class="container"> 
     <h2>Book Results</h2>
            {{#each books}}  
