--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -5,6 +5,8 @@
 </ul>
 
 <div>
-    <h1 id="errorMessage">404 Page Not Found</h1>
-    <a href="/welcome">← Back To Home</a>
+  <h1 id="errorMessage">404 Page Not Found</h1>
+  <div id="dog">
+    <img src="images/Dog-Reading-book.jpg" alt="">
+  </div>
 </div>
