--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
   {{!-- <script src="js/addbook.js" type="text/javascript"></script> --}}
-</head
+</head>
 <body class="d-flex flex-column" id="background">
   {{{body}}}
 </body>
