Fixed the error flash messages issue

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,6 +1,6 @@
-<ul class="nav justify-content-end" id="logout">
+<ul class="nav justify-content-end" >
   <li class="nav-item">
-    <a class="nav-link active" href="#">Logout</a>
+    <a class="nav-link active" id="logout" href="/logout">Logout</a>
   </li>
 </ul>
 <div>
@@ -9,3 +9,6 @@
     <img src="images/Dog-Reading-book.jpg" alt="">
   </div>
 </div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
+ 
