--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,5 +1,6 @@
 <div id="main-container" class="container">
 <div class="jumbotron text-center header-wrap" align="center">
+{{{message}}}
 <form id="signin" name="signin" method="post" action="signin">
   <label for="email">Email Address</label>
   <input class="text" name="email" type="text" />
