--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,6 @@
 <div id="main-container" class="container">
 <div class="jumbotron text-center header-wrap" align="center">
+{{{message}}}
 <form id="signup" name="signup" method="post" action="/signup">
   <label for="email">Email</label>
   <input class="text" name="email" type="email" />
