--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <ul class="nav justify-content-end" id="logout">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Logout</a>
+    <a class="nav-link active" href="/logout">Logout</a>
   </li>
 </ul>
 
@@ -20,4 +20,3 @@
   </div>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-{{!-- <script src="js/index.js"></script> --}}
