--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,6 +1,6 @@
 <ul class="nav justify-content-end" id="logout">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Logout</a>
+    <a class="nav-link active" href="/logout">Logout</a>
   </li>
 </ul>
 
@@ -20,8 +20,6 @@
      {{/each}}
    </ul>
  </div>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  {{!-- <script src="js/addbook.js" type="text/javascript"></> --}}
  
 
 
