--- a/views/searchResults.handlebars
+++ b/views/searchResults.handlebars
@@ -1,6 +1,6 @@
 <ul class="nav justify-content-end" id="logout">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Logout</a>
+    <a class="nav-link active" href="/logout">Logout</a>
   </li>
 </ul>
 
@@ -20,8 +20,8 @@
                     <button class="BookButton btn btn-primary" data-idname="{{this.id}}" id="{{this.id}}" data-title="{{this.volumeInfo.title}}"> Add Book!</a>
                </div>
                <div class="d-flex justify-content-end">
-                   <button type="button" class="btn btn-secondary upvote" data-bookid="{{this.id}}">&#128077;</button>
-                   <button type="button" class="btn btn-secondary" data-bookid="{{this.id}}">&#128078;</button>
+                   <button type="button" class="btn btn-secondary upvote onclick="this.disabled=true"" data-bookid="{{this.id}}">&#128077;</button>
+                   <button type="button" class="btn btn-secondary onclick="this.disabled=true"" data-bookid="{{this.id}}">&#128078;</button>
                </div>
            </div>
             {{/each}}
