--- a/views/searchResults.handlebars
+++ b/views/searchResults.handlebars
@@ -1,5 +1,6 @@
-<div class="container"> 
+<div class="container" id="results"> 
     <h2>Book Results</h2>
+    <p>Click on a book to add it to your list and then vote!</p>
            {{#each books}}  
           <div class="card">
         <div class="row no-gutters">
