fixed signin image responsiveness, fixed button interactivity, added homepage to navigation bar, created readme

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,7 +1,10 @@
-<ul class="nav justify-content-end" >
-  <li class="nav-item">
-    <a class="nav-link active" id="logout" href="/logout">Logout</a>
-  </li>
+<ul class="nav justify-content-end" id="logout">
+    <li class="nav-item">
+        <a class="nav-link active" href="/index">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/logout">Logout</a>
+    </li>
 </ul>
 <div>
   <h1 id="errorMessage">404 Page Not Found</h1>
