--- a/views/lookup.handlebars
+++ b/views/lookup.handlebars
@@ -1,8 +1,12 @@
 <ul class="nav justify-content-end" id="logout">
-  <li class="nav-item">
-    <a class="nav-link active" href="/logout">Logout</a>
-  </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/index">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/logout">Logout</a>
+    </li>
 </ul>
+
 <div class="container">
     <h2>Book Lookup</h2>
     <form  action="/results" method ="POST">
