--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -6,7 +6,7 @@
   <input class="text" name="email" type="text" />
   <label for="password">Password</label>
   <input name="password" type="password" />
-  <input class="btn" type="submit" value="Sign In" />
+  <input class="btn" type="submit" id="submitbtn" value="Sign In" />
 </form>
 </div>
 </div>
