--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,7 +8,7 @@
   <input name="username" type="text" />
   <label for="password">Password</label>
   <input name="password" type="password" />
-  <input class="btn" type="submit" value="Sign Up" />
+  <input class="btn" type="submit" id="submitbtn" value="Sign Up" />
 </form>
 </div>
 </div>
