--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,10 @@
 <ul class="nav justify-content-end" id="logout">
-  <li class="nav-item">
-    <a class="nav-link active" href="/logout">Logout</a>
-  </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/index">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/logout">Logout</a>
+    </li>
 </ul>
 
 <div class="container" id="welcome">
