--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,4 +22,12 @@
     </div>
   </div>
 </div>
+
+
+
+
+{{!-- 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ --}}
+
+<script src="js/allbooks.js" type="text/javascript"></script>s
